--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Ricardo Roman Landeros",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
